// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-hint mode does not add class when mode is default 1`] = `
<p6-hint mode="2">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  default
</p6-hint>
`;

exports[`p6-hint mode does not add class when mode is undefined 1`] = `
<p6-hint mode="undefined">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  undefined
</p6-hint>
`;

exports[`p6-hint mode has the class "is-danger" when mode is "0" 1`] = `
<p6-hint class="is-danger" mode="0">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  danger
</p6-hint>
`;

exports[`p6-hint mode has the class "is-default" when mode is "2" 1`] = `
<p6-hint mode="2">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  default
</p6-hint>
`;

exports[`p6-hint mode has the class "is-info" when mode is "3" 1`] = `
<p6-hint class="is-info" mode="3">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  info
</p6-hint>
`;

exports[`p6-hint mode has the class "is-primary" when mode is "5" 1`] = `
<p6-hint class="is-primary" mode="5">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  primary
</p6-hint>
`;

exports[`p6-hint mode has the class "is-success" when mode is "4" 1`] = `
<p6-hint class="is-success" mode="4">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  success
</p6-hint>
`;

exports[`p6-hint mode has the class "is-warning" when mode is "1" 1`] = `
<p6-hint class="is-warning" mode="1">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  warning
</p6-hint>
`;

exports[`p6-hint renders 1`] = `
<p6-hint>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  hint text
</p6-hint>
`;
